Fix the testimonial component's bug on small screen mobiles.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -568,6 +568,7 @@ a {
 /* Testimonial */
 .testimonial {
   padding: 3rem;
+  overflow: visible;
 }
 
 .testimonial__image {
